# modelrelay-rs

./: Cargo.toml  README.md  api.json  build.rs
docs/: async.md  auth.md  blocking.md  mocks.md  telemetry.md
examples/: convenience.rs  workflows_multi_agent.rs
src/: api_key.rs  bash_policy.rs  bash_tokenizer.rs  billing.rs  blocking.rs  chat.rs  client.rs  convenience.rs  core.rs  customers.rs  errors.rs  http.rs  identifiers.rs  images.rs  lib.rs  local_bash_tools.rs  local_fs_tools.rs  local_tools_common.rs  mock.rs  models.rs  ndjson.rs  plugins.rs  responses.rs  runs.rs  sessions.rs  sql.rs  sql_tool_loop.rs  sse.rs  state_handles.rs  structured.rs  telemetry.rs  testing.rs  tiers.rs  token_providers.rs  tools.rs  types.rs  workflow.rs  workflow_builder.rs  workflow_intent.rs  workflow_intent_builder.rs  (+4 more)
src/workflow/: events.rs  helpers_v1.rs  ids.rs  mod.rs  run.rs  spec.rs
tests/: blocking_customers.rs  blocking_mock.rs  customers_async.rs  device_flow_async.rs  http_client.rs  integration.rs  runs.rs  stream_timeouts.rs  tools_conformance.rs  tools_v0_conformance.rs  workflow_builder_conformance.rs  workflow_constants.rs  workflow_helpers_v1.rs
