[package]
name = "modelrelay"
version = "0.86.1"
edition = "2021"
description = "Rust SDK for the ModelRelay API"
repository = "https://github.com/modelrelay/modelrelay-rs"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/modelrelay"
keywords = ["llm", "ai", "client", "sdk"]
categories = ["api-bindings"]

[features]
default = ["streaming"]
blocking = ["reqwest/blocking"]
streaming = ["reqwest/stream", "dep:futures-util", "dep:futures-core"]
tracing = ["dep:tracing"]
mock = []

[build-dependencies]
schemars = "0.8"
serde_json = "1"
typify = "0.5"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
fastrand = "2"
hex = "0.4"
regress = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", default-features = true, optional = true }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
futures-util = "0.3"
